# cadx-csgrs-example1

./: Cargo.toml  README.md  cube_sphere_difference.stl  cube_trans0.00_sphere1.00_difference.stl  cube_trans0.00_sphere1.25_difference.stl  cube_trans0.10_sphere1.25_difference.stl  cube_trans0.50_sphere1.25_difference.stl  cube_trans1.00_sphere1.25_difference.stl  cube_trans_sphere1_25_difference.stl  sphere.stl
src/: main.rs
